# mlzoomcamp-midterm

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  notebook_seeds.ipynb  predict.py  pyproject.toml  test_prediction_service.py  train.py
data/: get_data.sh
