[project]
name = "mlzoomcamp-midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "clustpy[full]>=0.0.2",
    "folium>=0.20.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mapclassify>=2.10.0",
    "pingouin>=0.5.5",
    "rpy2>=3.6.4",
    "seaborn>=0.13.2",
    "typer>=0.20.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
