[project]
name = "mlzoomcamp-midterm"
version = "0.1.0"
description = "Machine learning midterm project for MLZoomcamp 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.121.1",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.4.0",
]
